Fix sidebar background issue on firefox

--- a/_sass/alecharp.scss
+++ b/_sass/alecharp.scss
@@ -61,7 +61,6 @@ body {
 
 .sidebar {
     min-height: 100%;
-    background: $primary-darker;
     color: #fff;
     header {
         text-align: center;
@@ -249,6 +248,9 @@ section#content {
                 color: $primary-lighter;
             }
         }
+    }
+    .sidebar { 
+        background: $primary-darker;
     }
     h1 { margin: 0; }
     #content { 
